commiting my progress Added example session controllers (pair programming) need to make a module controller moved all crud controllers to "/resource"
